09-05-2004 :
 - wxbMainFrame : reconnecting/disconnecting implemented
 - wxbMainFrame : Added menus to allow the user to change his config
      file, and to edit it.

08-05-2004 :
 - wxbMainFrame : The user can now choose his configuration file,
      and his choice is stored in a wxConfig (registry under Win32,
      file under Linux)...
 - wxbConfigFileEditor : Created a small text editor

07-05-2004 :
 - console_thread : Added support for the new parse_config which
      returns a status code.
 - wxbMainFrame/console_thread : A command line parameter now
      allows the user to choose his config file.

06-05-2004 :
 - wxbMainFrame : Corrected font bug in GTK+ 1.2
 - console_thread : Added support for Mac OS X configuration
      file location.

02-05-2004 :
 - wxbMainFrame : Corrected incorrect casting of thread event
      functions (reported by Aristedes Maniatis)
 - wxbRestorePanel : Corrected incorrect casting of event
      functions (reported by Aristedes Maniatis)

01-05-2004 :
 - wxbRestorePanel : Corrected a problem when you double-clicked an 
      a folder in the list, the list was then refreshed two times
      (instead of one) in the new directory
 - wxbRestorePanel : Improved configuration panels' look
 - wxbRestorePanel : Added titles to configuration panels
 - wxbMainFrame : If the connection drops unexpectedly, it should say 
   it lost the connection to the Director and then wait for you to
   either manually exit or (when it becomes possible) reconnect.
 - wxbMainFrame : corrected segmentation faults when exiting
     (to be verified)
 - wxbMainFrame : the user can quit however the state is

30-04-2004 :
 - wxbRestorePanel : Added "Cancel" button to cancel restore at
     all state of restore process.
 - wxbMainFrame : Added "Send" button
 - wxbRestorePanel (first configure) : Changed defaults values when
     Job Name changes
 - wxbRestorePanel (first configure) : corrected problem when bad
     parameters are chosen