@@ -1,3 +1,6 @@
+10-05-2004 :
+ - wxbTableParser : wxHashMap replaced by wxArray
+
 09-05-2004 :
  - wxbMainFrame : reconnecting/disconnecting implemented
  - wxbMainFrame : Added menus to allow the user to change his config
